added menu buttons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<div class="content">
 										<h2 class="major">Pizza like Mamas!</h2>
 										<p>Here at Mario's we cook our pizzas in our stone pizza oven, which we imported especially from Naples, Italy. True to Italian tradition, our Neapolitan pizza dough is made up of just a few ingredients; water, salt, yeast and of course flour. We cater to all dietary requirements including vegetarian, vegan and gluten-free.</p>
-										<!-- <a href="#" class="special">Learn more</a> -->
+										<a href="about.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -69,7 +69,7 @@
 									<div class="content">
 										<h2 class="major">We do pasta too!</h2>
 										<p>Not only do we serve delicious pizzas, our menu also has pasta dishes to choose from including spaghetti carbonara, lobster linguine, lasagne and ravioli. All made and cooked fresh to order by our Italian chefs in house.</p>
-										<!-- <a href="#" class="special">Learn more</a> -->
+										<a href="menu.html" class="special">View our menu</a>
 									</div>
 								</div>
 							</section>
@@ -81,7 +81,7 @@
 									<div class="content">
 										<h2 class="major">Desserts and digestifs</h2>
 										<p>If you still have room for more, we have a daily selection of desserts, coffees and digestifs. We also have a comprehensive soft drink, beer and wine menu for you to enjoy alongside your meal.</p>
-										<!-- <a href="#" class="special">Learn more</a> -->
+										<a href="menu.html" class="special">View our menu</a>
 									</div>
 								</div>
 							</section>
