added menu button

--- a/about.html
+++ b/about.html
@@ -60,6 +60,8 @@
 
 									<p> The atmosphere at Mario's Pizzeria is all about feeling welcome and part of the family. We welcome everyone from the smallest baby to great grandma and want to ensure you all have an enjoyment, authentic Italian experience.</p>
 
+									<a href="menu.html" class="special">View our menu</a>
+
 									<section class="features">
 										
 									</section>
